--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-373.4KB/s(Youtube:不良林), server: xmrh001.xmrth-node.xyz, port: 15880, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh001.xmrth-node.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-282.4KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.59, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-199.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-476.8KB/s(Youtube:不良林), server: 5.183.176.81, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-736.2KB/s(Youtube:不良林), server: 54.36.174.181, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-471.4KB/s(Youtube:不良林), server: 5.183.176.81, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 54.36.174.181, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-423.4KB/s(Youtube:不良林), server: 5.183.176.84, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-2.23MB/s(Youtube:不良林), server: 85.208.108.59, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇳 中国-2.12MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇮🇹 意大利-959.1KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-373.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-282.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-373.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-282.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-373.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-282.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-373.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-373.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-282.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-373.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-282.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-373.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-282.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-373.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-282.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
