--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-476.8KB/s(Youtube:不良林), server: 5.183.176.81, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-736.2KB/s(Youtube:不良林), server: 54.36.174.181, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-471.4KB/s(Youtube:不良林), server: 5.183.176.81, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 54.36.174.181, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-423.4KB/s(Youtube:不良林), server: 5.183.176.84, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.23MB/s(Youtube:不良林), server: 85.208.108.59, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-2.12MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇮🇹 意大利-959.1KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇨🇳 中国-165.4KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-4.04MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇫🇷 法国-563.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-199.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-281.0KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 柬埔寨-1.19MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-380.8KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇸🇬 新加坡-1.76MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.57MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
+      - 柬埔寨-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
+      - 柬埔寨-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
+      - 柬埔寨-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
+      - 柬埔寨-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
+      - 柬埔寨-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
+      - 柬埔寨-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-476.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-736.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-471.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-423.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
+      - 柬埔寨-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
