--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇨🇳 中国-165.4KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-4.04MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇫🇷 法国-563.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-199.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-281.0KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 柬埔寨-1.19MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-380.8KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇸🇬 新加坡-1.76MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.57MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-364.7KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-250.3KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇫🇷 法国-193.8KB/s(Youtube:不良林), server: 54.36.174.181, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-561.3KB/s(Youtube:不良林), server: 85.208.108.20, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-6.12MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.74MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.21MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.34MB/s(Youtube:不良林), server: 85.208.108.59, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
-      - 柬埔寨-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
-      - 柬埔寨-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
-      - 柬埔寨-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
-      - 柬埔寨-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
-      - 柬埔寨-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
-      - 柬埔寨-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-240.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇫🇷 法国-563.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-199.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-281.0KB/s(Youtube:不良林)
-      - 柬埔寨-1.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-380.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
